Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,12 @@ variables:
   acrLoginServer: 'ftmingsoft3uccacr.azurecr.io'
   backImageName: 'employee-crud-api'
   frontImageName: 'employee-crud-front'
-  ResourceGroupName: 'TPSIngSoft3UCC2024'
-  backContainerInstanceNameQA: 'ftm-crud-api-qa'
+  ResourceGroupName: 'TPSIngSoft3UCC2024' #Por ejemplo 'TPS_INGSOFT3_UCC'
+  backContainerInstanceNameQA: 'ftm-crud-api-qa' #Por ejemplo 'as-crud-api-qa'
   backImageTag: 'latest' 
-  container-cpu-api-qa: 1 
-  container-memory-api-qa: 1.5 
-  acrName: 'ftmingsoft3uccacr' 
+  container-cpu-api-qa: 1 #CPUS de nuestro container de QA
+  container-memory-api-qa: 1.5 #RAM de nuestro container de QA
+  acrName: 'ftmingsoft3uccacr' # Nombre de tu ACR sin el sufijo .azurecr.io
 
 stages:
   - stage: BuildAndAnalyze
@@ -87,6 +87,12 @@ stages:
               publishWebProjects: True
               arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
               zipAfterPublish: true
+
+          # Copiar el código de EmployeeCrudApi a dockerfile-back
+          - script: |
+              mkdir -p $(Build.ArtifactStagingDirectory)/dockerfile-back
+              cp -R $(Build.SourcesDirectory)/EmployeeCrudApi/* $(Build.ArtifactStagingDirectory)/dockerfile-back/
+            displayName: 'Copiar código de EmployeeCrudApi a dockerfile-back'
 
           # Publicar artefactos de compilación
           - task: PublishBuildArtifacts@1
@@ -189,11 +195,6 @@ stages:
         steps:
           - checkout: self
 
-          # Agregar tarea para actualizar la CLI de Azure
-          - script: |
-              az upgrade --yes
-            displayName: 'Actualizar CLI de Azure'
-
           #----------------------------------------------------------
           # BUILD DOCKER BACK IMAGE Y PUSH A AZURE CONTAINER REGISTRY
           #----------------------------------------------------------
@@ -240,7 +241,6 @@ stages:
           #----------------------------------------------------------
           # BUILD DOCKER FRONT IMAGE Y PUSH A AZURE CONTAINER REGISTRY
           #----------------------------------------------------------
-
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Artefactos de Front'
             inputs:
@@ -270,27 +270,3 @@ stages:
               command: push
               repository: $(acrLoginServer)/$(frontImageName)
               tags: 'latest'
-
-#----------------------------------------------------------
-# ### STAGE DEPLOY A QA
-#----------------------------------------------------------
-  - stage: DeployQA
-    displayName: 'Deploy en QA'
-    dependsOn: DockerBuildAndPush
-    jobs:
-      - job: DeployBackend
-        displayName: 'Deploy Back-End a QA'
-        steps:
-          - task: AzureCLI@2
-            displayName: 'Desplegar Contenedor Back QA'
-            inputs:
-              azureSubscription: '$(ConnectedServiceName)'
-              scriptType: 'bash'
-              scriptLocation: 'inlineScript'
-              inlineScript: |
-                az container create --resource-group $(ResourceGroupName) \
-                                    --name $(backContainerInstanceNameQA) \
-                                    --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
-                                    --cpu $(container-cpu-api-qa) \
-                                    --memory $(container-memory-api-qa) \
-                                    --dns-name-label $(backContainerInstanceNameQA) --ports 80
