--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,13 +96,6 @@ stages:
               ArtifactName: 'api-drop'
               publishLocation: 'Container'
 
-          # Copiar el código de EmployeeCrudApi a docker/api
-          - script: |
-              echo "Copiando código de EmployeeCrudApi a docker/api"
-              mkdir -p $(Build.SourcesDirectory)/docker/api
-              cp -r $(Build.SourcesDirectory)/EmployeeCrudApi/* $(Build.SourcesDirectory)/docker/api/
-            displayName: 'Copiar código de EmployeeCrudApi'
-
           # Análisis de código con SonarCloud
           - task: SonarCloudAnalyze@2
             inputs:
@@ -272,3 +265,50 @@ stages:
               command: push
               repository: $(acrLoginServer)/$(frontImageName)
               tags: 'latest'
+
+#----------------------------------------------------------
+# ### STAGE DEPLOY TO ACI QA
+#----------------------------------------------------------
+
+  - stage: DeployToACIQA
+    displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+    dependsOn: DockerBuildAndPush
+    jobs:
+      - job: deploy_to_aci_qa
+        displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+        pool:
+          vmImage: 'ubuntu-latest'
+
+        steps:
+          #------------------------------------------------------
+          # DEPLOY DOCKER BACK IMAGE A AZURE CONTAINER INSTANCES QA
+          #------------------------------------------------------
+
+          - task: AzureCLI@2
+            displayName: 'Desplegar Imagen Docker de Back en ACI QA'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                echo "Resource Group: $(ResourceGroupName)"
+                echo "Container Instance Name: $(backContainerInstanceNameQA)"
+                echo "ACR Login Server: $(acrLoginServer)"
+                echo "Image Name: $(backImageName)"
+                echo "Image Tag: $(backImageTag)"
+                echo "Connection String: $(cnn_string_qa)"
+                
+                az container delete --resource-group $(ResourceGroupName) --name $(backContainerInstanceNameQA) --yes
+
+                az container create --resource-group $(ResourceGroupName) \
+                  --name $(backContainerInstanceNameQA) \
+                  --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                  --registry-login-server $(acrLoginServer) \
+                  --registry-username $(acrName) \
+                  --registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv) \
+                  --dns-name-label $(backContainerInstanceNameQA) \
+                  --ports 80 \
+                  --environment-variables ConnectionStrings__DefaultConnection="$(cnn_string_qa)" \
+                  --restart-policy Always \
+                  --cpu $(container-cpu-api-qa) \
+                  --memory $(container-memory-api-qa)
