--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -2,8 +2,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
-# Copiar los binarios publicados de la API desde la carpeta docker/api al contenedor
-COPY . .
+# Copiar los binarios publicados de la API
+COPY /api-drop . 
 
 # Exponer los puertos 80 (HTTP) y 443 (HTTPS)
 EXPOSE 80
