--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
 # Copiar los binarios publicados de la API
-COPY api-drop . 
+COPY . .
  
 # Exponer los puertos 80 (HTTP) y 443 (HTTPS)
 EXPOSE 80
