--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -2,9 +2,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
-# Copiar los binarios publicados de la API
-COPY . .
- 
+# Copiar y descomprimir los binarios publicados de la API desde el archivo zip
+COPY api-drop/EmployeeCrudApi.zip ./
+RUN apt-get update && apt-get install -y unzip && unzip EmployeeCrudApi.zip && rm EmployeeCrudApi.zip
+
 # Exponer los puertos 80 (HTTP) y 443 (HTTPS)
 EXPOSE 80
 EXPOSE 443
