Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -126,7 +126,7 @@ stages:
             displayName: 'Instalar Node.js'
             inputs:
               versionSpec: '22.x'
-    
+
           # Instalar dependencias
           - script: npm install
             displayName: 'Instalar dependencias'
@@ -177,6 +177,7 @@ stages:
 #----------------------------------------------------------
 # ### STAGE BUILD DOCKER IMAGES Y PUSH A AZURE CONTAINER REGISTRY
 #----------------------------------------------------------
+  
   - stage: DockerBuildAndPush
     displayName: 'Construir y Subir Imágenes Docker a ACR'
     dependsOn: BuildAndAnalyze
@@ -200,6 +201,15 @@ stages:
               artifactName: 'api-drop'
               targetPath: '$(Pipeline.Workspace)/api-drop'
 
+          # Aquí se agrega el paso para copiar el archivo ZIP
+
+          - task: CopyFiles@2
+            displayName: 'Copiar archivo ZIP de API a carpeta de Docker'
+            inputs:
+              SourceFolder: '$(Pipeline.Workspace)/api-drop'
+              Contents: '**/*.zip'
+              TargetFolder: '$(Pipeline.Workspace)/dockerfile-back'
+
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Dockerfile de Back'
             inputs:
@@ -209,7 +219,6 @@ stages:
 
           - script: ls -lR $(Pipeline.Workspace)/api-drop
             displayName: 'Listar archivos en api-drop'
-
 
           - task: AzureCLI@2
             displayName: 'Iniciar Sesión en Azure Container Registry (ACR)'
@@ -271,48 +280,57 @@ stages:
               tags: 'latest'
 
 #----------------------------------------------------------
-# ### STAGE DEPLOY TO ACI QA
+# ### STAGE DEPLOY TO AZURE CONTAINER INSTANCE
 #----------------------------------------------------------
 
-  - stage: DeployToACIQA
-    displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+  - stage: DeployToAzure
+    displayName: 'Desplegar en Azure Container Instance'
     dependsOn: DockerBuildAndPush
     jobs:
-      - job: deploy_to_aci_qa
-        displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+      - job: DeployApi
+        displayName: 'Desplegar API en ACI'
         pool:
           vmImage: 'ubuntu-latest'
-
         steps:
-          #------------------------------------------------------
-          # DEPLOY DOCKER BACK IMAGE A AZURE CONTAINER INSTANCES QA
-          #------------------------------------------------------
-
           - task: AzureCLI@2
-            displayName: 'Desplegar Imagen Docker de Back en ACI QA'
+            displayName: 'Desplegar API en ACI'
             inputs:
               azureSubscription: '$(ConnectedServiceName)'
               scriptType: bash
               scriptLocation: inlineScript
               inlineScript: |
-                echo "Resource Group: $(ResourceGroupName)"
-                echo "Container Instance Name: $(backContainerInstanceNameQA)"
-                echo "ACR Login Server: $(acrLoginServer)"
-                echo "Image Name: $(backImageName)"
-                echo "Image Tag: $(backImageTag)"
-                echo "Connection String: $(cnn_string_qa)"
-                
-                az container delete --resource-group $(ResourceGroupName) --name $(backContainerInstanceNameQA) --yes
-
-                az container create --resource-group $(ResourceGroupName) \
+                az container create \
+                  --resource-group $(ResourceGroupName) \
                   --name $(backContainerInstanceNameQA) \
                   --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                  --cpu $(container-cpu-api-qa) \
+                  --memory $(container-memory-api-qa) \
                   --registry-login-server $(acrLoginServer) \
                   --registry-username $(acrName) \
-                  --registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv) \
-                  --dns-name-label $(backContainerInstanceNameQA) \
-                  --ports 80 \
-                  --environment-variables ConnectionStrings__DefaultConnection="$(cnn_string_qa)" \
-                  --restart-policy Always \
-                  --cpu $(container-cpu-api-qa) \
-                  --memory $(container-memory-api-qa)
+                  --registry-password $(ACR_PASSWORD) \
+                  --os-type Linux \
+                  --restart-policy Always
+
+      - job: DeployFront
+        displayName: 'Desplegar Front en ACI'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: AzureCLI@2
+            displayName: 'Desplegar Front en ACI'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                az container create \
+                  --resource-group $(ResourceGroupName) \
+                  --name $(frontContainerInstanceNameQA) \
+                  --image $(acrLoginServer)/$(frontImageName):$(backImageTag) \
+                  --cpu $(container-cpu-front-qa) \
+                  --memory $(container-memory-front-qa) \
+                  --registry-login-server $(acrLoginServer) \
+                  --registry-username $(acrName) \
+                  --registry-password $(ACR_PASSWORD) \
+                  --os-type Linux \
+                  --restart-policy Always
