--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -293,6 +293,16 @@ stages:
           vmImage: 'ubuntu-latest'
         steps:
           - task: AzureCLI@2
+            displayName: 'Listar imágenes en ACR'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                echo "Listando imágenes en ACR..."
+                az acr repository list --name $(acrName) --output table
+
+          - task: AzureCLI@2
             displayName: 'Desplegar API en ACI'
             inputs:
               azureSubscription: '$(ConnectedServiceName)'
@@ -316,6 +326,16 @@ stages:
         pool:
           vmImage: 'ubuntu-latest'
         steps:
+          - task: AzureCLI@2
+            displayName: 'Listar imágenes en ACR (Front)'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                echo "Listando imágenes en ACR para el Front..."
+                az acr repository list --name $(acrName) --output table
+
           - task: AzureCLI@2
             displayName: 'Desplegar Front en ACI'
             inputs:
